syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/EssentialData/Common.proto";


option csharp_namespace = "DawnQuant.AShare.Api.EssentialData";

package DawnQuant.AShare.Api.EssentialData;


//龙头股
service THSIndexTradeDataApi {
  
//保存龙头股
  rpc SaveTHSIndexTradeDatas(SaveTHSIndexTradeDatasRequest) returns (google.protobuf.Empty);
 
}


message SaveTHSIndexTradeDatasRequest
{
    repeated  BellwetherDto Entities=1;
}













